tests/errors/surf_arity_03.experr
positional argument follows keyword argument
